Fix spacing and overflow in some sections

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,8 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-right: 2rem;
+  padding-left: 2rem;
 }
 
 .header-logo {
@@ -69,16 +71,12 @@ header {
   color: var(--palette1-color-1);
 }
 
-.main-section {
-  
-}
-
 .section-title {
   background-color: var(--palette1-color-2);
   display: flex;
   justify-content: flex-start;
-  align-items: center;
   gap: 1rem;
+  align-items: center;
   padding: 1rem 4rem;
 }
 
@@ -92,25 +90,25 @@ h2 {
   justify-content: center;
   align-items: flex-start;
   gap: 1rem;
-  padding-top: 1.2rem;
-  padding-bottom: 1.2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .aboutme-left-content {
   display: block;
   max-width: 30rem;
-  flex-basis: 40%;
+  flex-basis: 48%;
 }
 
 .aboutme-right-content {
-  flex-basis: 50%;
+  flex-basis: 49%;
   line-height: 1.9rem;
 }
 
 
 
 .aboutme-info-container img {
-  width: 50%;
+  width: 45%;
 }
 
 .projects-container {
@@ -122,15 +120,12 @@ h2 {
 
 .stack-container {
   display: grid;
-  justify-content: center;
-  align-content: center;
+  justify-items: center;
+  align-items: center;
   row-gap: 2rem;
-  column-gap: 1rem;
-  padding: 2rem;
+  padding: 2rem 2rem;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-flow: row;
-  padding-left: 4rem;
-  padding-right: 4rem;
 }
 
 .stack-layer {
@@ -139,15 +134,14 @@ h2 {
   border-radius: 10px;
   overflow: hidden;
   text-align: center;
-  width: 14rem;
+  width: 13rem;
 }
 
 .stack-layer-title {
   background-color: var(--palette1-color-3);
   color: var(--palette1-color-5);
-  font-size: medium;
-  font-weight: 400;
-  padding: 0.5rem;
+  font-weight: 200;
+  padding: 0.5rem 0rem;
 }
 
 .stack-layer-tools {
@@ -190,7 +184,7 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 3rem;
+  padding: 1rem 4rem;
 }
 
 .footer-contact-container {
